# SuperBOM

./: .bandit.config  .gitignore  .osv-scanner.toml  .pre-commit-config.yaml  CHANGELOG.md  HEADER  README.md  RELEASE.md  SECURITY.md  pyproject.toml  pytest.ini  run_fuzzing.sh
.github/workflows/: fuzzing.yml  main.yml  release.yml  scorecard.yml
fuzz/: README.md  fuzz_hypothesis.py  fuzz_parsers.py  run_fuzzing.sh
scripts/: create-release.sh
src/condabom/: condadependencies.py  license_cleaner.py  main.py  pipdependencies.py
src/condabom/utils/: condacache.py  githubutils.py  pypiutils.py
src/superbom/: condadependencies.py  main.py  pipdependencies.py  test.py
src/superbom/utils/: condacache.py  githubutils.py  licenseutils.py  logger.py  parsers.py  pypiutils.py
src/superbom/utils/packageindexes/conda/: condacache.py  condadependencies.py
src/superbom/utils/packageindexes/pypi/: pipdependencies.py
tests/: test_conda_parser.py  test_condacache.py  test_condadeps.py  test_githubutils.py  test_licenseutils.py  test_logging.py  test_main.py  test_mock.py  test_parsers.py  test_pip_parser.py  test_pipdeps.py  test_poetry_parser.py  test_pypiutils.py
tests/unit_tests/: test_conda_parser.py  test_condacache.py  test_condadeps.py  test_githubutils.py  test_licenseutils.py  test_logging.py  test_main.py  test_mock.py  test_pip_parser.py  test_pipdeps.py  test_poetry_parser.py  test_pypiutils.py
