[project]
name = "superBOM"
version = "0.3.0"
description = ""
authors = [
    {name = "Michael Beale", email = "michael.beale@intel.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.4",
    "pandas>=2.2.3",
    "PyYAML>=6.0.2",
    "tqdm>=4.67.0",
    "spdx-matcher>=0.0.13",
    "spdx-lookup>=0.3.3",
    "openpyxl>=3.1.5",
    "foss-flame>=0.20.7",
    "colorlog>=6.9.0",
    "packaging>=24.2",
    "tomli>=2.2.1",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.6.9",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
fuzzing = [
    "hypothesis>=6.0.0",
    "tomli-w>=1.0.0",
    "coverage[toml]>=7.0.0",
    "pytest>=8.3.4",  # For running property-based tests
]

[project.scripts]
superbom = "superbom.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/superbom"]

[tool.hatch.build.targets.sdist]
include = [
    "src/superbom",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests",
    "*.log",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
